--- a/src/Faq.html
+++ b/src/Faq.html
@@ -22,12 +22,11 @@
 
 <body class="mt-[8rem] bg-gray-100 text-gray-800">
 
-    <!-- Section Foire aux Questions -->
+    <!-- Section FAQ -->
     <main class="p-6">
         <div id="faq" class="mt-10">
-            <h3 class="text-center text-xl font-bold">Foire aux Questions</h3>
+            <h3 class="text-center text-xl font-bold">FAQ</h3>
             <hr class="my-4 border-t border-gray-300">
-
 
             <div class="space-y-6">
                 <!-- Question 1 -->
@@ -166,12 +165,46 @@
                     </p>
                 </div>
 
+                <!-- Question 9 -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                    <h4 class="text-lg md:text-xl font-semibold">NaMaster est-il accessible depuis un mobile ?</h4>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">
+                        Oui, notre plateforme est entièrement responsive et vous pouvez accéder à NaMaster depuis votre
+                        smartphone ou tablette, où que vous soyez. Vous pourrez consulter les masters, les comparer et
+                        sauvegarder vos préférés directement depuis votre appareil mobile.
+                    </p>
+                </div>
+
+                <!-- Question 10 -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                    <h4 class="text-lg md:text-xl font-semibold">NaMaster propose-t-il une application mobile ?</h4>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">
+                        Pour le moment, NaMaster est accessible uniquement via son site web, mais nous travaillons sur
+                        le développement d'une application mobile pour offrir une expérience encore plus fluide et
+                        pratique pour nos utilisateurs.
+                    </p>
+                </div>
+
+                <!-- Question Contact -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                    <h4 class="text-lg md:text-xl font-semibold">Comment puis-je vous contacter ?</h4>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">
+                        Vous pouvez nous contacter par email à <a href="mailto:contact@namaster.com"
+                            class="font-bold text-blue-600">contact@namaster.com</a> pour toute question ou demande
+                        d'information.
+                    </p>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">
+                        Par téléphone, appelez-nous au <span class="font-bold">+33 1 23 45 67 89</span> du lundi au
+                        vendredi, de 9h à 18h.
+                    </p>
+                    <p class="mt-2 text-sm md:text-base text-gray-600">
+                        Vous pouvez également nous envoyer du courrier à l'adresse suivante : <br>
+                        <span class="font-bold">NaMaster, 123 Rue de l'Université, 75000 Paris, France</span>.
+                    </p>
+                </div>
             </div>
         </div>
     </main>
-
-
-
 
     <footer id="footer-container">
     </footer>
