--- a/src/Faq.html
+++ b/src/Faq.html
@@ -22,11 +22,12 @@
 
 <body class="mt-[8rem] bg-gray-100 text-gray-800">
 
-    <!-- Section FAQ -->
+    <!-- Section Foire aux questions -->
     <main class="p-6">
         <div id="faq" class="mt-10">
-            <h3 class="text-center text-xl font-bold">FAQ</h3>
+            <h3 class="text-center text-xl font-bold">Foire aux questions</h3>
             <hr class="my-4 border-t border-gray-300">
+
 
             <div class="space-y-6">
                 <!-- Question 1 -->
