encore re modif faq

--- a/src/Faq.html
+++ b/src/Faq.html
@@ -200,7 +200,7 @@
                     </p>
                     <p class="mt-2 text-sm md:text-base text-gray-600">
                         Vous pouvez également nous envoyer du courrier à l'adresse suivante : <br>
-                        <span class="font-bold">NaMaster, 123 Rue de l'Université, 75000 Paris, France</span>.
+                        <span class="font-bold">52 Rue des Docteurs Calmette et Guérin, 53000 Laval, France</span>.
                     </p>
                 </div>
             </div>
