changement de la langue de l'HTML de 'en' à 'fr'

--- a/src/LesMasters.html
+++ b/src/LesMasters.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
@@ -14,7 +14,6 @@
   <!-- Swiper JS -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="./js/filtresRecherche.js"></script>
-
   <title>Résultats NaMaster</title>
 
 </head>
