mention illégal en rouge

--- a/src/mentionsLegales.html
+++ b/src/mentionsLegales.html
@@ -103,7 +103,7 @@
 
                 <!-- Mentions illégales -->
                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                    <a href="./mentionsIllégales.html" class="font-bold text-blue-600">Mentions Illégales</a>
+                    <a href="./mentionsIllégales.html" class="font-bold text-red-600">Mentions Illégales</a>
                 </div>
             </div>
         </div>
