Logo réseau footer

--- a/src/footer.html
+++ b/src/footer.html
@@ -12,26 +12,26 @@
         <div class="grid grid-cols-2 col-span-1 justify-items-center gap-x-2 ">
             <div class="grid grid-cols-2 col-span-1 justify-items-center gap-x-2">
                 <a href="https://www.instagram.com"
-                    class="flex bg-gray-600 rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
+                    class="flex bg-white rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
                     
-                    <p class="text-white font-bold">RSN</p>
+                    <img src="/img/facebook.png" class="">
                 </a>
 
                 <a href="https://www.instagram.com"
-                    class="flex bg-gray-600 rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
-                    <p class="text-white font-bold">RSN</p>
+                    class="flex bg-white rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
+                    <img src="/img/instagram.png" class="">
                 </a>
             </div>
 
             <div class="grid grid-cols-2 col-span-1 justify-items-center gap-x-2">
                 <a href="https://www.instagram.com"
-                    class="flex bg-gray-600 rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
-                    <p class="text-white font-bold">RSN</p>
+                    class="flex bg-white rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
+                    <img src="/img/linkedin.png" class="">
                 </a>
 
                 <a href="https://www.instagram.com"
-                    class="flex bg-gray-600 rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
-                    <p class="text-white font-bold">RSN</p>
+                    class="flex bg-white rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
+                    <img src="/img/youtube.png" class="">
                 </a>
             </div>
 
