--- a/src/etablissement.html
+++ b/src/etablissement.html
@@ -23,79 +23,27 @@
         <div id="header-container"></div>
     </header>
 
-    <main class="p-6 space-y-8">
-        <!-- Carte de l'établissement -->
-        <div class="bg-white rounded-lg shadow-md p-4 flex flex-col sm:flex-row gap-4">
-            <div class="w-16 h-16 bg-gray-300 flex items-center justify-center rounded-full">
-                <span class="text-xl font-bold">images</span>
-            </div>
-            <div>
-                <h2 class="text-lg font-semibold">IUT de Xxxxxxxx</h2>
-                <p class="text-sm text-gray-600">Lorem ipsum dolor sit amet consectetur. Fermentum leo eget ipsum in dui
-                    ultrices morbi id.</p>
-            </div>
+    <main class="p-6 sm:mx-8 lg:my-10">
+        <div class="text-center mb-8">
+            <h1 id="establishment-name" class="font-bold text-5xl sm:text-6xl lg:text-7xl"></h1>
+            <p id="establishment-academie" class="text-lg text-gray-600"></p>
         </div>
-
-        <!-- Titre des masters -->
         <div>
-            <h3 class="text-center text-xl font-bold">MASTERS DISPONIBLES DANS<br>CET ÉTABLISSEMENT</h3>
-            <hr class="my-4 border-t border-gray-300">
-        </div>
-
-        <!-- Liste des masters -->
-        <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4">
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
-            </div>
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
-            </div>
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
-            </div>
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
-            </div>
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
-            </div>
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
-            </div>
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
-            </div>
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h4 class="text-lg font-semibold">MASTER Xxxxxxxx</h4>
-                <p class="text-sm text-gray-600">Description master. Lorem ipsum dolor sit amet consectetur. Est nunc
-                    elit molestie vel viverra phasellus rutrum urna vulputate. Orci aliquet lectus ut tristique lacus.
-                </p>
+            <h2 class="font-bold text-3xl mb-4">Masters disponibles</h2>
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4" id="masters-container">
+                <!-- Les masters seront insérés ici -->
             </div>
         </div>
     </main>
 
     <script>
+
+        // Fonction pour récupérer les paramètres de l'URL
+function getQueryParam(param) {
+    const urlParams = new URLSearchParams(window.location.search);
+    return urlParams.get(param);
+}
+
         fetch('header.html')
             .then(response => response.text())
             .then(data => {
@@ -125,6 +73,112 @@
                 document.getElementById('search-container').innerHTML = data;
             })
             .catch(error => console.error('Error loading header:', error));
+
+
+
+          // Fonction principale pour gérer la page établissement
+document.addEventListener('DOMContentLoaded', () => {
+    const mastersContainer = document.getElementById('masters-container');
+    const establishmentName = document.getElementById('establishment-name');
+    const establishmentAcademie = document.getElementById('establishment-academie');
+    const apiEtablissementsURL = 'https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/etablissements';
+    const apiFormationsURL = 'https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/formations';
+
+    // Récupère l'ID de l'établissement dans l'URL
+    const establishmentId = getQueryParam('id');
+
+    if (!establishmentId) {
+        console.error("Aucun ID d'établissement spécifié.");
+        mastersContainer.innerHTML = '<p class="text-red-500 text-center">Aucun établissement trouvé.</p>';
+        return;
+    }
+
+    // Charge les données de l'établissement et des formations
+    fetchEstablishmentData(establishmentId)
+        .then(establishment => {
+            // Mettre à jour le titre de l'établissement
+            establishmentName.textContent = establishment.nom || 'Nom non disponible';
+            establishmentAcademie.textContent = `Académie ID : ${establishment.academieId || 'Non spécifié'}`;
+
+            // Charger et afficher les formations liées
+            fetchMastersForEstablishment(establishmentId);
+        })
+        .catch(error => {
+            console.error("Erreur :", error);
+            mastersContainer.innerHTML = '<p class="text-red-500 text-center">Impossible de charger les données. Veuillez réessayer plus tard.</p>';
+        });
+});
+
+// Fonction pour récupérer les paramètres de l'URL
+function getQueryParam(param) {
+    const urlParams = new URLSearchParams(window.location.search);
+    return urlParams.get(param);
+}
+
+// Fonction pour récupérer les données de l'établissement
+function fetchEstablishmentData(establishmentId) {
+    return fetch('https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/etablissements')
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Erreur lors du chargement des établissements.');
+            }
+            return response.json();
+        })
+        .then(data => {
+            const establishment = data.find(etab => etab.uai === establishmentId);
+            if (!establishment) {
+                throw new Error('Établissement introuvable.');
+            }
+            return establishment;
+        });
+}
+
+/// Fonction pour récupérer et afficher les formations liées à un établissement
+function fetchMastersForEstablishment(establishmentId) {
+    const mastersContainer = document.getElementById('masters-container');
+
+    fetch('https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/formations')
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Erreur lors du chargement des formations.');
+            }
+            return response.json();
+        })
+        .then(formations => {
+            // Filtrer les formations pour cet établissement et exclure celles où parcours est null
+            const filteredMasters = formations.filter(master => 
+                master.etabUai === establishmentId && master.parcours !== null
+            );
+
+            // Afficher les formations filtrées
+            if (filteredMasters.length === 0) {
+                mastersContainer.innerHTML = '<p class="text-gray-500 text-center">Aucune formation trouvée pour cet établissement.</p>';
+            } else {
+                filteredMasters.forEach(master => {
+                    const masterCard = createMasterCard(master);
+                    mastersContainer.appendChild(masterCard);
+                });
+            }
+        })
+        .catch(error => {
+            console.error("Erreur lors du chargement des formations :", error);
+            mastersContainer.innerHTML = '<p class="text-red-500 text-center">Impossible de charger les formations. Veuillez réessayer plus tard.</p>';
+        });
+}
+
+// Fonction pour créer une carte de master
+function createMasterCard(master) {
+    const masterCard = document.createElement('div');
+    masterCard.className = 'p-4 bg-white border rounded-md shadow-sm';
+    masterCard.innerHTML = `
+        <h2 class="font-bold text-lg mb-2 lg:text-2xl">${master.parcours || 'Nom non disponible'}</h2>
+        <p class="text-sm text-gray-500 lg:text-lg">Lieu(x) : ${master.lieux || 'Non spécifié'}</p>
+        <p class="text-sm text-gray-500 lg:text-lg">Alternance : ${master.alternance ? 'Oui' : 'Non'}</p>
+    `;
+    return masterCard;
+}
+;
+
     </script>
     <footer>
         <div id="footer-container"></div>
