--- a/src/LesEtablissements.html
+++ b/src/LesEtablissements.html
@@ -29,7 +29,8 @@
     <div class="text-center">
       <h1 class="font-bold text-5xl sm:my-10 sm:py-5 lg:text-7xl lg:py-6">Les différents Établissements</h1>
     </div>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:mx-8 lg:mx-10 mb-8" id="etablissements-container">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:mx-8 lg:mx-10 mb-8"
+      id="etablissements-container">
       <!-- Les établissements seront insérés ici -->
     </div>
     <div class="text-center mt-8">
@@ -64,90 +65,90 @@
       .catch(error => console.error('Error loading header:', error));
 
 
-      // Charger les établissements
-      document.addEventListener('DOMContentLoaded', () => {
-    const etablissementsContainer = document.getElementById('etablissements-container');
-    const loadMoreButton = document.getElementById('load-more');
-    const apiURL = 'https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/etablissements';
-    const apiURL2 = 'https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/academies';
+    // Charger les établissements
+    document.addEventListener('DOMContentLoaded', () => {
+      const etablissementsContainer = document.getElementById('etablissements-container');
+      const loadMoreButton = document.getElementById('load-more');
+      const apiURL = 'https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/etablissements';
+      const apiURL2 = 'https://la-lab4ce.univ-lemans.fr/masters-stats/api/rest/academies';
 
-    let allAcademies = []; // Stocke toutes les académies
-    let allEtablissements = []; // Stocke tous les établissements
-    let currentIndex = 0; // Index actuel pour le chargement des établissements
+      let allAcademies = []; // Stocke toutes les académies
+      let allEtablissements = []; // Stocke tous les établissements
+      let currentIndex = 0; // Index actuel pour le chargement des établissements
 
-    // Fonction pour créer une carte d'établissement
-    const createEtablissementCard = (etablissement) => {
-  const academie = allAcademies.find((acad) => acad.id === etablissement.academieId); // Trouve l'académie correspondante
-  const card = document.createElement('a');
-  card.href = `etablissement.html?id=${etablissement.uai}`; // Utilise le champ `uai` comme identifiant
-  card.innerHTML = `
+      // Fonction pour créer une carte d'établissement
+      const createEtablissementCard = (etablissement) => {
+        const academie = allAcademies.find((acad) => acad.id === etablissement.academieId); // Trouve l'académie correspondante
+        const card = document.createElement('a');
+        card.href = `etablissement.html?id=${etablissement.uai}`; // Utilise le champ `uai` comme identifiant
+        card.innerHTML = `
     <div class="p-4 bg-white border rounded-md shadow-sm">
       <h2 class="font-bold text-lg mb-2 lg:text-2xl">${etablissement.nom || 'Nom non disponible'}</h2>
       <p class="text-sm text-gray-500 lg:text-lg">Académie : ${academie ? academie.nom : 'Non spécifiée'}</p>
       <p class="text-xs text-gray-400 lg:text-sm mt-2">Région : ${academie ? academie.regionNom : 'Non spécifiée'}</p>
     </div>
   `;
-  return card;
-};
+        return card;
+      };
 
-    // Fonction pour charger les établissements dans le conteneur
-    const loadEtablissements = (count) => {
-      const nextEtablissements = allEtablissements.slice(currentIndex, currentIndex + count);
-      nextEtablissements.forEach((etablissement) => {
-        const card = createEtablissementCard(etablissement);
-        etablissementsContainer.appendChild(card);
-      });
-      currentIndex += count;
-
-      // Cache le bouton si tous les établissements sont chargés
-      if (currentIndex >= allEtablissements.length) {
-        loadMoreButton.style.display = 'none';
-      }
-    };
-
-    // Requête pour récupérer les académies
-    const fetchAcademies = () => {
-      return fetch(apiURL2)
-        .then((response) => {
-          if (!response.ok) {
-            throw new Error('Erreur lors de la récupération des académies.');
-          }
-          return response.json();
-        })
-        .then((data) => {
-          allAcademies = data; // Stocke les académies récupérées
+      // Fonction pour charger les établissements dans le conteneur
+      const loadEtablissements = (count) => {
+        const nextEtablissements = allEtablissements.slice(currentIndex, currentIndex + count);
+        nextEtablissements.forEach((etablissement) => {
+          const card = createEtablissementCard(etablissement);
+          etablissementsContainer.appendChild(card);
         });
-    };
+        currentIndex += count;
 
-    // Requête pour récupérer les établissements
-    const fetchEtablissements = () => {
-      return fetch(apiURL)
-        .then((response) => {
-          if (!response.ok) {
-            throw new Error('Erreur lors de la récupération des établissements.');
-          }
-          return response.json();
+        // Cache le bouton si tous les établissements sont chargés
+        if (currentIndex >= allEtablissements.length) {
+          loadMoreButton.style.display = 'none';
+        }
+      };
+
+      // Requête pour récupérer les académies
+      const fetchAcademies = () => {
+        return fetch(apiURL2)
+          .then((response) => {
+            if (!response.ok) {
+              throw new Error('Erreur lors de la récupération des académies.');
+            }
+            return response.json();
+          })
+          .then((data) => {
+            allAcademies = data; // Stocke les académies récupérées
+          });
+      };
+
+      // Requête pour récupérer les établissements
+      const fetchEtablissements = () => {
+        return fetch(apiURL)
+          .then((response) => {
+            if (!response.ok) {
+              throw new Error('Erreur lors de la récupération des établissements.');
+            }
+            return response.json();
+          })
+          .then((data) => {
+            allEtablissements = data; // Stocke les établissements récupérés
+          });
+      };
+
+      // Charger les données des deux API
+      Promise.all([fetchAcademies(), fetchEtablissements()])
+        .then(() => {
+          loadEtablissements(9); // Charge les 9 premiers établissements après la récupération des académies
         })
-        .then((data) => {
-          allEtablissements = data; // Stocke les établissements récupérés
+        .catch((error) => {
+          console.error('Erreur:', error);
+          etablissementsContainer.innerHTML = '<p class="text-red-500 text-center">Impossible de charger les données. Veuillez réessayer plus tard.</p>';
         });
-    };
 
-    // Charger les données des deux API
-    Promise.all([fetchAcademies(), fetchEtablissements()])
-      .then(() => {
-        loadEtablissements(9); // Charge les 9 premiers établissements après la récupération des académies
-      })
-      .catch((error) => {
-        console.error('Erreur:', error);
-        etablissementsContainer.innerHTML = '<p class="text-red-500 text-center">Impossible de charger les données. Veuillez réessayer plus tard.</p>';
+      // Événement pour charger plus d'établissements
+      loadMoreButton.addEventListener('click', () => {
+        loadEtablissements(9); // Charge 9 établissements supplémentaires
       });
-
-    // Événement pour charger plus d'établissements
-    loadMoreButton.addEventListener('click', () => {
-      loadEtablissements(9); // Charge 9 établissements supplémentaires
     });
-  });
 
   </script>
   <footer>
