--- a/src/footer.html
+++ b/src/footer.html
@@ -11,7 +11,7 @@
         </div>
         <div class="grid grid-cols-2 col-span-1 justify-items-center gap-x-2 ">
             <div class="grid grid-cols-2 col-span-1 justify-items-center gap-x-2">
-                <a href="https://www.instagram.com"
+                <a href="https://www.facebook.com"
                     class="flex bg-white rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
                     
                     <img src="/img/facebook.png" class="">
@@ -24,12 +24,12 @@
             </div>
 
             <div class="grid grid-cols-2 col-span-1 justify-items-center gap-x-2">
-                <a href="https://www.instagram.com"
+                <a href="https://www.linkedin.com"
                     class="flex bg-white rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
                     <img src="/img/linkedin.png" class="">
                 </a>
 
-                <a href="https://www.instagram.com"
+                <a href="https://www.youtube.com"
                     class="flex bg-white rounded-full m-5 xl:h-16 xl:w-16 sm:h-12 sm:w-12 h-10 w-10 justify-center items-center">
                     <img src="/img/youtube.png" class="">
                 </a>
