--- a/src/master.html
+++ b/src/master.html
@@ -7,10 +7,12 @@
     <title>Vos Favoris</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./js/bgMenu.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
 
     <!-- fichiers js -->
     <script src="./js/bgMenu.js"></script>
     <script src="./js/navBarre.js"></script>
+    <script src="./js/echart.js"></script>
 
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -24,6 +26,9 @@
     </header>
 
     <main class="p-6 space-y-8">
+        <!--Test echart-->
+        <div id="chart" style="width: 600px; height: 400px;"></div>
+        <script src="./js/mainEcharts.js"></script>
         <!-- Carte de l'établissement -->
         <div class="bg-white rounded-lg shadow-md p-4 flex flex-col sm:flex-row gap-4">
             <div class="w-16 h-16 bg-gray-300 flex items-center justify-center rounded-full">
