--- a/src/lesEtablissements.html
+++ b/src/lesEtablissements.html
@@ -15,7 +15,7 @@
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="./js/filtresRecherche.js"></script>
 
-  <title>Résultats NaMaster</title>
+  <title>Établissements</title>
 
 </head>
 
